K8s/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: balazsmark888/command-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: command-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
  - name: command-service
    protocol: TCP
    port: 80
    targetPort: 80
