K8s/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platform-service
          image: balazsmark888/platform-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platform-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: platform-service
  ports:
  - name: platform-service
    protocol: TCP
    port: 80
    targetPort: 80
