K8s/platforms-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-node-port-service
spec: 
  type: NodePort
  selector:
    app: platform-service
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
