K8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: testingressservice.com
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platform-cluster-ip-service
                port:
                  number: 80
          - path: /api/commands/platforms
            pathType: Prefix
            backend:
              service:
                name: command-cluster-ip-service
                port:
                  number: 80
